--- a/pages/subpages/mine/withdraw/index.wxml
+++ b/pages/subpages/mine/withdraw/index.wxml
@@ -13,13 +13,13 @@
   <view class="amount">{{NUM.toFixed(amount, 2)}}</view>
 
   <view class="fee-card">
-    <view class="fee-item" wx:if="{{curOptionIdx !== 0 && (scene === 2 || scene === 3)}}">
+    <view class="fee-item" wx:if="{{curOptionIdx !== 0 && (scene === 2 || scene === 3 || scene === 8)}}">
       <view class="fee-label">税费（费率6%）</view>
       <view class="fee-amount">¥{{NUM.toFixed(taxFee, 2)}}</view>
     </view>
     <view class="fee-item" wx:if="{{curOptionIdx !== 0}}">
-      <view class="fee-label">提现手续费（每笔1元）</view>
-      <view class="fee-amount">¥1</view>
+      <view class="fee-label">提现手续费（费率0.6%）</view>
+      <view class="fee-amount">¥{{NUM.toFixed(handlingFee, 2)}}</view>
     </view>
     <view class="fee-item">
       <view class="fee-label">实际到账</view>
@@ -43,21 +43,21 @@
     <textarea class="remark" style="font-size: 24rpx;" value="{{remark}}" bindinput="setRemark" maxlength="32" placeholder="添加备注，最多32个字" />
   </view>
 
-  <view class="withdraw-tips" wx:if="{{curOptionIdx === 0}}">
+  <view class="withdraw-tips">
     <view>提现说明：</view>
-    <view>每月25～31号可提现上月的结算收益</view>
-  </view>
-  <view class="withdraw-tips" wx:if="{{curOptionIdx !== 0 && scene === 1}}">
-    <view>提现说明：</view>
-    <view>1. 提现金额必须大于1元，方可提现</view>
-    <view>2. 举例：提现100元，扣取提现手续费每笔1元，实际到账99元</view>
-    <view>3. 每月25～31号可提现上月的结算收益</view>
-  </view>
-  <view class="withdraw-tips" wx:if="{{curOptionIdx !== 0 && (scene === 2 || scene === 3)}}">
-    <view>提现说明：</view>
-    <view>1. 提现金额为税前收入，每笔提现按照第三方代扣代缴综合税费6%收取，实际到账为税后收入举例：提现100元，扣取提现手续费每笔1元与综合税费6%（6元），实际到账93元</view>
-    <view>2. 提现金额必须大于1元，单笔最高可提现3万。</view>
-    <view>3. 每月25～31号可提现上月的结算收益</view>
+    <view class="withdraw-tip">提现金额必须大于1元，单笔最高可提现3万</view>
+    <view class="withdraw-tip" wx:if="{{curOptionIdx !== 0 && (scene === 2 || scene === 3 || scene === 8)}}">提现金额为税前收入，每笔提现按照第三方代扣代缴综合税费6%收取</view>
+    <view class="withdraw-tip" wx:if="{{curOptionIdx !== 0}}">提现手续费每笔按0.6%收取</view>
+    <view class="withdraw-tip" wx:if="{{curOptionIdx !== 0}}">
+      <text>实际到账金额 = 提现金额 </text>
+      <text wx:if="{{scene === 2 || scene === 3 || scene === 8}}">- 综合税费</text>
+      <text>- 手续费。举例：提现1000元，</text>
+      <text wx:if="{{scene === 2 || scene === 3 || scene === 8}}">扣取综合税费60元，</text>
+      <text>扣取手续费6元，实际到账</text>
+      <text>{{(scene === 2 || scene === 3 || scene === 8) ? 934 : 994}}</text>
+      <text>元</text>
+    </view>
+    <view class="withdraw-tip" wx:if="{{scene !== 8}}">每月25～31号可提现上月的结算收益</view>
   </view>
 </view>
 
