--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -11,11 +11,15 @@
     <view class="title">商家入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
+  <view class="list row between" bindtap="inviteMerchant">
+    <view class="title">邀请商家入驻</view>
+    <image class="arrow" src="./images/arrow.png" />
+  </view>
 </view>
 
 <view class="list-wrap">
-  <view class="list row between">
-    <view class="title">常见问题与反馈</view>
+  <view class="list row between" bindtap="feedback">
+    <view class="title">问题反馈</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <button 
@@ -35,10 +39,6 @@
     <view class="title">推荐给好友</view>
     <image class="arrow" src="./images/arrow.png" />
   </button>
-  <view class="list row between" bindtap="inviteMerchant">
-    <view class="title">邀请商家入驻</view>
-    <image class="arrow" src="./images/arrow.png" />
-  </view>
   <view class="list row between">
     <view class="title">关于小鱼游</view>
     <view class="row">
