--- a/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/qa-list/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/subpages/qa-list/index.wxss
@@ -102,7 +102,7 @@
   font-size: 30rpx;
   font-weight: 500;
   border-radius: 40rpx;
-  background: var(--blue-1-btn-bg);
+  background: var(--blue-linear-1);
 }
 
 .no-more-tips {
