--- a/pages/subpages/mall/catering/subpages/meal-ticket-order-check/index.wxss
+++ b/pages/subpages/mall/catering/subpages/meal-ticket-order-check/index.wxss
@@ -108,7 +108,7 @@
   padding: 18rpx 24rpx calc(18rpx + env(safe-area-inset-bottom));
   width: 100%;
   background: #fff;
-  border-top: 1px solid #f5f6f7;
+  border-top: 1px solid #f5f6fe;
 }
 .price-label {
   margin-top: 8rpx;
