--- a/pages/subpages/mall/components/evaluation-item/index.wxss
+++ b/pages/subpages/mall/components/evaluation-item/index.wxss
@@ -2,7 +2,7 @@
   margin-bottom: 24rpx;
   padding: 24rpx;
   background: #fff;
-  box-shadow: 0 0 12rpx 6rpx #f5f6f7;
+  box-shadow: 0 0 12rpx 6rpx #f5f6fe;
   border-radius: 18rpx;
 }
 .user-avatar {
