--- a/pages/subpages/mall/hotel/index.wxss
+++ b/pages/subpages/mall/hotel/index.wxss
@@ -21,7 +21,7 @@
   width: 400rpx;
   height: 36px;
   border-radius: 18px;
-  background: #f5f6f7;
+  background: #f5f6fe;
 }
 .calendar-bar {
   padding-right: 24rpx;
