--- a/pages/subpages/mine/order/subpages/goods-order/evaluation/index.wxss
+++ b/pages/subpages/mine/order/subpages/goods-order/evaluation/index.wxss
@@ -63,7 +63,7 @@
   font-size: 28rpx;
   line-height: 1.5;
   border-radius: 16rpx;
-  background: #f5f6f7;
+  background: #f5f6fe;
 }
 
 .van-uploader__wrapper {
