--- a/pages/subpages/mine/setting/index.wxss
+++ b/pages/subpages/mine/setting/index.wxss
@@ -2,11 +2,11 @@
   margin-bottom: 12rpx;
   padding: 0 24rpx;
   background: #fff;
-  border-top: 1px solid #f5f6f7;
+  border-top: 1px solid #f5f6fe;
 }
 .list {
   height: 100rpx;
-  border-bottom: 1px solid #f5f6f7;
+  border-bottom: 1px solid #f5f6fe;
 }
 .list:last-child {
   border-bottom: none;
