--- a/components/restaurant-item-strip/index.wxss
+++ b/components/restaurant-item-strip/index.wxss
@@ -85,7 +85,7 @@
   margin-right: 10rpx;
   color: #999;
   font-size: 18rpx;
-  background: #f6f6f6;
+  background: #f5f6fe;
   padding: 2rpx 10rpx;
   border-radius: 10rpx;
 }
