--- a/pages/subpages/mine/merchant/subpages/order-search/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/order-search/index.wxml
@@ -46,7 +46,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
-      bind:update="updateScenicOrderList"
+      bind:update="updateOrderList"
     />
   </view>
   <view class="order-list" wx:if="{{type === 2}}">
@@ -55,7 +55,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
-      bind:update="updateHotelOrderList"
+      bind:update="updateOrderList"
     />
   </view>
   <view class="order-list" wx:if="{{type === 3}}">
@@ -64,7 +64,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
-      bind:update="updateMealTicketOrderList"
+      bind:update="updateOrderList"
     />
   </view>
   <view class="order-list" wx:if="{{type === 4}}">
@@ -73,7 +73,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
-      bind:update="updateSetMealOrderList"
+      bind:update="updateOrderList"
     />
   </view>
   <view class="order-list" wx:if="{{type === 5}}">
@@ -82,7 +82,7 @@
       wx:key="index" 
       item="{{item}}" 
       index="{{index}}" 
-      bind:update="updateGoodsOrderList"
+      bind:update="updateOrderList"
     />
   </view>
   <empty-illus wx:if="{{!orderList.length}}" desc="暂无{{['景点', '酒店', '餐券', '套餐', '商品'][type - 1]}}订单" />
