--- a/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxml
+++ b/pages/subpages/home/media/live/live-push/components/push-room/components/goods-shelves-popup/index.wxml
@@ -1,4 +1,4 @@
-<popup bind:hide="hide" background="#f5f6fe">
+<popup bind:hide="hide" background="#f5f6f8">
   <view class="goods-shelves-popup">
     <view class="header row between">
       <view class="menu-wrap row">
