--- a/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxml
@@ -1,4 +1,4 @@
-<popup background="#f5f6fe" bind:hide="hide">
+<popup background="#f5f6f8" bind:hide="hide">
   <view class="goods-popup">
     <view class="popup-title row">全部商品（{{total}}）</view>
     <scroll-view class="goods-list" scroll-y bindscrolltolower="loadMore">
