--- a/pages/subpages/mall/catering/index.wxss
+++ b/pages/subpages/mall/catering/index.wxss
@@ -21,7 +21,7 @@
   width: 360rpx;
   height: 36px;
   border-radius: 18px;
-  background: #f5f6fe;
+  background: #f5f6f8;
 }
 .search-icon {
   margin-right: 5px;
