--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/more-info/index.wxss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 44px;
   background: #fff;
-  border-top: 1px solid #f5f6fe;
+  border-top: 1px solid #f5f6f8;
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05);
   z-index: 100;
 }
@@ -110,7 +110,7 @@
   padding: 24rpx 0;
   color: #333;
   font-size: 24rpx;
-  border-bottom: 1px solid #f5f6fe;
+  border-bottom: 1px solid #f5f6f8;
 }
 .tel:last-child {
   padding-bottom: 0;
