--- a/pages/subpages/mall/components/scenic-item/index.wxss
+++ b/pages/subpages/mall/components/scenic-item/index.wxss
@@ -3,7 +3,7 @@
   width: 220rpx;
   font-size: 0;
   border-radius: 12rpx;
-  box-shadow: 0 0 12rpx 6rpx #f5f6fe;
+  box-shadow: 0 0 12rpx 6rpx #f5f6f8;
 }
 .scenic-item-cover {
   border-radius: 12rpx 12rpx 0 0;
