--- a/pages/subpages/mall/scenic/subpages/scenic-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/subpages/more-info/index.wxss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 44px;
   background: #fff;
-  border-top: 1px solid #f5f6fe;
+  border-top: 1px solid #f5f6f8;
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05);
   z-index: 100;
 }
@@ -121,7 +121,7 @@
   padding: 24rpx 0;
   color: #333;
   font-size: 24rpx;
-  border-bottom: 1px solid #f5f6fe;
+  border-bottom: 1px solid #f5f6f8;
 }
 .tel:last-child {
   padding-bottom: 0;
@@ -153,7 +153,7 @@
   margin-top: 24rpx;
   padding: 18rpx;
   font-size: 24rpx;
-  background: #f5f6fe;
+  background: #f5f6f8;
   border-radius: 8rpx;
 }
 .facility-name {
@@ -171,7 +171,7 @@
 .tips-item {
   display: flex;
   padding: 24rpx 0;
-  border-bottom: 1px solid #f5f6fe;
+  border-bottom: 1px solid #f5f6f8;
 }
 .tips-item:last-child {
   padding-bottom: 0;
