--- a/pages/subpages/mall/scenic/subpages/scenic-detail/subpages/qa-list/subpages/qa-detail/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/subpages/qa-list/subpages/qa-detail/index.wxss
@@ -128,7 +128,7 @@
   height: 80rpx;
   font-size: 26rpx;
   border-radius: 40rpx;
-  background: #f5f6fe;
+  background: #f5f6f8;
 }
 .submit-btn {
   margin-left: 24rpx;
