--- a/pages/subpages/mine/merchant/components/hotel-order-item/index.wxss
+++ b/pages/subpages/mine/merchant/components/hotel-order-item/index.wxss
@@ -37,7 +37,7 @@
 .deliver-info-wrap {
   margin-top: 24rpx;
   padding: 24rpx;
-  background: #f5f6fe;
+  background: #f5f6f8;
   border-radius: 24rpx;
 }
 .deliver-info {
