--- a/pages/subpages/mine/order/subpages/scenic-order/evaluation/index.wxss
+++ b/pages/subpages/mine/order/subpages/scenic-order/evaluation/index.wxss
@@ -26,7 +26,7 @@
   font-size: 28rpx;
   line-height: 1.5;
   border-radius: 16rpx;
-  background: #f5f6fe;
+  background: #f5f6f8;
 }
 
 .van-uploader__wrapper {
