--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -76,7 +76,7 @@
   box-shadow: 0 2px 20px #f0f0f0;
 }
 .search-bar.active {
-  background: #f5f6fe;
+  background: #f5f6f8;
   box-shadow: none;
 }
 .placeholder {
