--- a/components/goods-item-strip/index.wxss
+++ b/components/goods-item-strip/index.wxss
@@ -37,10 +37,10 @@
 
 .goods-item {
   padding: 24rpx 0;
-  border-bottom: 1px solid #f5f6fa;
+  border-bottom: 1px solid #f5f6f8;
 }
 .goods-item.show-border {
-  border-bottom: 1px solid #f5f6fa;
+  border-bottom: 1px solid #f5f6f8;
 }
 
 .goods-cover {
