--- a/pages/subpages/home/media/author-center/index.wxss
+++ b/pages/subpages/home/media/author-center/index.wxss
@@ -53,7 +53,7 @@
   position: relative;
   margin-top: 360rpx;
   border-radius: 30rpx 30rpx 0 0;
-  background: #f5f6fa;
+  background: #f5f6f8;
 }
 .avatar-wrap {
   position: absolute;
@@ -67,8 +67,8 @@
   width: 180rpx;
   height: 180rpx;
   border-radius: 50%;
-  border: 10rpx solid #f5f6fa;
-  background: #f5f6fa;
+  border: 10rpx solid #f5f6f8;
+  background: #f5f6f8;
 }
 
 .btns-wrap {
