--- a/pages/subpages/mall/scenic/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/order-check/index.wxss
@@ -167,7 +167,7 @@
 .tourist-info-item {
   padding: 32rpx 0;
   font-size: 28rpx;
-  border-bottom: 1px solid #f5f6fa;
+  border-bottom: 1px solid #f5f6f8;
 }
 .tourist-info-item:last-child {
   border-bottom: none;
@@ -188,7 +188,7 @@
   padding: 18rpx 24rpx calc(18rpx + env(safe-area-inset-bottom));
   width: 100%;
   background: #fff;
-  border-top: 1px solid #f5f6fa;
+  border-top: 1px solid #f5f6f8;
 }
 .total-price-wrap {
   margin-right: 32rpx;
