--- a/pages/subpages/mine/setting/index.wxss
+++ b/pages/subpages/mine/setting/index.wxss
@@ -1,23 +1,23 @@
 .list-wrap {
-  margin-bottom: 12rpx;
+  margin-bottom: 16rpx;
   padding: 0 24rpx;
   background: #fff;
-  border-top: 1px solid #f5f6f8;
+  border-top: 0.5px solid #eee;
 }
 .list {
   height: 100rpx;
-  border-bottom: 1px solid #f5f6f8;
+  border-bottom: 0.5px solid #eee;
 }
 .list:last-child {
   border-bottom: none;
 }
 .title {
   color: #333;
-  font-size: 26rpx;
+  font-size: 28rpx;
 }
 .content {
   color: #666;
-  font-size: 24rpx;
+  font-size: 26rpx;
 }
 .arrow {
   margin-left: 6rpx;
