--- a/pages/subpages/mine/setting/subpages/about-us/index.wxss
+++ b/pages/subpages/mine/setting/subpages/about-us/index.wxss
@@ -7,26 +7,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 48rpx 24rpx;
+  padding: 48rpx 24rpx 32rpx;
   background: #fff;
   border-radius: 24rpx;
 }
 .logo {
-  width: 120rpx;
-  height: 120rpx;
+  width: 128rpx;
+  height: 128rpx;
   border-radius: 50%;
-  box-shadow: 0 2px 20px #f0f0f0;
+  box-shadow: 0 2px 20px #eee;
 }
 .title {
   margin-top: 24rpx;
   color: #333;
-  font-size: 28rpx;
+  font-size: 30rpx;
   font-weight: bold;
+}
+.content {
+  margin-top: 8rpx;
 }
 .section {
   margin-top: 8rpx;
   color: #666;
-  font-size: 24rpx;
+  font-size: 26rpx;
   text-indent: 2em
 }
 
@@ -41,18 +44,18 @@
   padding-left: 24rpx;
   height: 100rpx;
   color: #333;
-  font-size: 28rpx;
+  font-size: 32rpx;
   font-weight: bold;
 }
 .info-list {
-  border-top: 0.5px solid #f5f6f8;
+  border-top: 0.5px solid #eee;
 }
 .info-item {
   display: flex;
   align-items: center;
   margin: 0 24rpx;
   height: 100rpx;
-  border-bottom: 0.5px solid #f5f6f8;
+  border-bottom: 0.5px solid #eee;
 }
 .info-item:last-child {
   border-bottom: none;
@@ -60,7 +63,7 @@
 .info-content {
   flex: 1;
   color: #333;
-  font-size: 26rpx;
+  font-size: 28rpx;
 }
 .arrow {
   margin-left: 6rpx;
